<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string-array name="spinner_set_goal_card">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="report">Report</string>
    <string name="anonymous">Anonymous</string>
    <string name="active">Active</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="today">Today</string>
    <string name="goals">Goals</string>
    <string name="your_goals">Your goals</string>
    <string name="reward">Reward</string>
    <string name="goal_metric_calories">![CDATA[Burn <b>%1$s</b> a <b>%2$s</b>]]</string>
    <string name="goal_metric_steps">![CDATA[Take <b>%1$s</b> steps a <b>%2$s</b>]]</string>
    <string name="goal_metric_distance">![CDATA[Move <b>%1$s</b> a <b>%2$s</b>]]</string>
    <string name="goal_metric_active">![CDATA[Be active for <b>%1$s</b> a <b>%2$s</b>]]</string>
    <string name="add_goal_metric_calories">I will burn %1$s a %2$s</string>
    <string name="add_goal_metric_steps">I will take %1$s steps a %2$s</string>
    <string name="add_goal_metric_distance">I will move %1$s a %2$s</string>
    <string name="add_goal_metric_active">I will be active for %1$s a %2$s</string>
    <string name="rating_easy">This will may be too easy challenge</string>
    <string name="rating_good">This looks like a good challenge</string>
    <string name="rating_difficult">This may be too difficult challenge</string>
    <string name="rating_insane">You are kidding, right ?</string>
    <string name="recurrence_day">day</string>
    <string name="recurrence_week">week</string>
    <string name="recurrence_month">month</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="add_goal">Add goal</string>
    <string name="average">Average</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="overall">Overall</string>
    <string name="type">Type</string>
    <string name="target">Target</string>
    <string name="new_goal">New goal</string>
    <string name="total_paid">Total spent</string>
    <string name="settle_debts">Settle debts</string>
    <string name="member_paid_for"><![CDATA[<b>%s</b> paid for]]></string>
    <string name="member_sent_to"><![CDATA[From <b>%s</b> to]]></string>
    <string name="show_all">Show all</string>
    <string name="transfer">Transfer</string>
    <plurals name="expense">
        <item quantity="one">%s expense</item>
        <item quantity="other">%s expenses</item>
    </plurals>
    <string name="expenses">Expenses</string>
    <string name="no_debts">No debts</string>
    <string name="overview">Overview</string>
    <string name="create_new_group">Create a new group</string>
    <string name="join_nearby_group">Join a nearby group</string>
    <string name="my_groups">My groups</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="who_should_pay"><![CDATA[<b>%s</b> should pay]]></string>
    <string name="anyone_can_pay"><![CDATA[<b>Anyone</b> can pay]]></string>
    <string name="sign_out">Sign out</string>
    <string name="members">Members</string>
    <string name="edit_group">Edit group</string>
    <string name="permissions">Permissions</string>
    <plurals name="activities_to_be_synced">
        <item quantity="one">activity to be synced when online</item>
        <item quantity="other">activities to be synced when online</item>
    </plurals>
    <string name="choose_email_app">Choose email app</string>
    <string name="desc_open_drawer">Open drawer</string>
    <string name="desc_close_drawer">Close drawer</string>
    <string name="one_member_warning">You need at least two members to add expenses.\n\nWant to track personal expenses? Try the Wallet app from our friends.</string>
    <string name="transactions_read_only_warning">You can\'t add transactions in read-only mode</string>
    <string name="join_nearby_offline_warning">You can\'t join nearby groups when offline</string>
    <string name="cant_sign_out_offline">You can\'t sign out when offline</string>
    <string name="signing_out">Signing out…</string>
    <string name="share_group">Share group</string>
    <string name="statistics_text"><![CDATA[Settle Up is used by <b>%1$s</b> users who created <b>%2$s</b> groups with their friends. Every user is part of <b>%3$s</b> groups on average.]]></string>
    <string name="more_members_paid">More</string>
    <plurals name="member">
        <item quantity="one">%s member</item>
        <item quantity="other">%s members</item>
    </plurals>
    <string name="groups_upgraded_title">Upgrade complete</string>
    <string name="groups_upgraded_description">Most active groups from previous version of Settle Up were upgraded. If you want to use some of your older groups, you can find them in the left menu under \"My Groups\".</string>
    <string name="show_groups">Show my groups</string>
    <string name="desc_from">From</string>
    <string name="desc_to">To</string>
    <string name="feedback_email_subject">Settle Up Feedback</string>
    <string name="error_email_subject">Settle Up Error</string>
    <string name="error_email_body">What did you do before the error occurred?\n\n\n</string>
    <string name="recent_activity">Recent activity</string>
    <string name="no_recent_activity">No recent activity in your groups</string>
    <string name="somebody">Somebody</string>
    <string name="somebody_changed_transfer"><![CDATA[<b>%1$s</b> changed a transfer: <b>%2$s</b>]]></string>
    <string name="somebody_added_transfer"><![CDATA[<b>%1$s</b> added a transfer: <b>%2$s</b>]]></string>
    <string name="somebody_removed_transfer"><![CDATA[<b>%1$s</b> removed a transfer: <b>%2$s</b>]]></string>
    <string name="somebody_changed_expense"><![CDATA[<b>%1$s</b> changed an expense: <b>%2$s</b>]]></string>
    <string name="somebody_added_expense"><![CDATA[<b>%1$s</b> added an expense: <b>%2$s</b>]]></string>
    <string name="somebody_removed_expense"><![CDATA[<b>%1$s</b> removed an expense: <b>%2$s</b>]]></string>
    <string name="somebody_changed_expense_no_purpose"><![CDATA[<b>%1$s</b> changed an expense]]></string>
    <string name="somebody_added_expense_no_purpose"><![CDATA[<b>%1$s</b> added an expense]]></string>
    <string name="somebody_removed_expense_no_purpose"><![CDATA[<b>%1$s</b> removed an expense]]></string>
    <string name="somebody_joined_group"><![CDATA[<b>%1$s</b> joined the group]]></string>
    <string name="somebody_left_group"><![CDATA[<b>%1$s</b> left the group]]></string>
    <string name="somebody_added_member"><![CDATA[<b>%1$s</b> added a member: <b>%2$s</b>]]></string>
    <string name="somebody_changed_member"><![CDATA[<b>%1$s</b> changed a member: <b>%2$s</b>]]></string>
    <string name="somebody_removed_member"><![CDATA[<b>%1$s</b> removed a member: <b>%2$s</b>]]></string>
    <string name="somebody_changed_group_currency"><![CDATA[<b>%1$s</b> changed the group currency to <b>%2$s</b>]]></string>
    <string name="somebody_deleted_all_transactions"><![CDATA[<b>%1$s</b> deleted all transactions]]></string>
    <string name="somebody_upgraded_group"><![CDATA[<b>%1$s</b> upgraded group from legacy app]]></string>
    <string name="transaction_added"><![CDATA[New transaction: <b>%s</b>]]></string>
    <string name="transaction_changed"><![CDATA[Changed transaction: <b>%s</b>]]></string>
    <string name="transaction_removed"><![CDATA[Removed transaction: <b>%s</b>]]></string>
    <string name="member_added"><![CDATA[New member: <b>%s</b>]]></string>
    <string name="member_changed"><![CDATA[Changed member: <b>%s</b>]]></string>
    <string name="member_removed"><![CDATA[Removed member: <b>%s</b>]]></string>
    <string name="change_empty_state">No activities yet</string>
    <string name="transactions">Transactions</string>
    <string name="transactions_empty_state">No transactions yet</string>
    <string name="search_results_empty_state">No results found</string>
    <string name="search_transactions">Search transactions</string>
    <string name="new_member">New member</string>
    <string name="create_new_member">Create a new member</string>
    <string name="create_new_member_hint">Type member\'s name</string>
    <string name="done">Done</string>
    <string name="member_deleted">Member deleted</string>
    <string name="missing_member">Missing member</string>
    <string name="step_continue">Continue</string>
    <string name="members_spent">Members spent</string>
    <string name="add_member">Add member</string>
    <string name="delete">Delete</string>
    <string name="cant_delete_involved_member">This member is involved in some transactions and cannot be deleted.\n\nYou can disable the member for new transactions at the bottom of this page.</string>
    <string name="cant_delete_last_member">You can not delete the last member of a group. The owner can delete the whole group in Edit group screen.</string>
    <string name="desc_change_photo">Change photo</string>
    <string name="photo">Photo</string>
    <string name="take_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="delete_photo">Delete photo</string>
    <string name="uploading">Uploading…</string>
    <string name="name">Name</string>
    <string name="bank_account">Bank account</string>
    <string name="default_weight">Default weight</string>
    <string name="what_does_it_mean">What does it mean?</string>
    <string name="this_is_me">This is me</string>
    <string name="include_in_new_transactions">Include this member in new transactions</string>
    <string name="default_weight_help">Default weight is ideal for couples or families who act as a single financial unit and settle debts differently.\nExample: In a group of 3 people one person has a weight of 2. This means that expenses will always be divided in ratios 1:1:2.</string>
    <string name="preparing_photo">Preparing photo…</string>
    <string name="delete_member_message">Do you wish to delete this member?</string>
    <string name="multiple_members">Multiple members</string>
    <string name="who_paid_title">Who paid?</string>
    <string name="how_much_title">How much?</string>
    <string name="for_whom_title">For whom?</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="switch_to_single">Switch to single</string>
    <string name="next">Next</string>
    <string name="desc_previous">Previous</string>
    <string name="invalid_expression">Invalid expression</string>
    <string name="add_receipt_photo">Add receipt photo</string>
    <string name="view_receipt_photo">View receipt photo</string>
    <string name="receipt_photo_being_uploaded">Receipt photo is uploading</string>
    <string name="purpose">Purpose</string>
    <string name="who_paid">Who paid</string>
    <string name="for_whom">For whom</string>
    <string name="simple_split">Simple split</string>
    <string name="split_by_amounts">Split by amounts</string>
    <string name="split_by_weights">Split by weights</string>
    <string name="date_and_time"><![CDATA[Date & time]]></string>
    <string name="exchange_rate_date">Exchange rate on %s</string>
    <string name="today_exchange_rate">Today\'s exchange rate</string>
    <string name="fixed_exchange_rate">Fixed exchange rate</string>
    <string name="transfer_between">Transfer between</string>
</resources>