<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_group_primary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/overview"
            android:icon="@drawable/ic_overview"
            android:title="@string/overview" />
        <item
            android:id="@+id/my_groups"
            android:icon="@drawable/ic_drawer_my_groups"
            android:title="@string/my_groups" />
        <item
            android:id="@+id/new_group"
            android:icon="@drawable/ic_drawer_new_group"
            android:title="@string/create_new_group" />
        <item
            android:id="@+id/join_nearby_group"
            android:icon="@drawable/ic_nearby"
            android:title="@string/join_nearby_group" />
    </group>

    <group
        android:id="@+id/drawer_group_secondary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_send_feedback"
            android:title="@string/send_feedback" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_drawer_about"
            android:title="@string/about" />
    </group>
</menu>