<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/vTitle"
        style="@style/TextView.CardTitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/today"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/ListHeader" />

    <cz.pepa.runapp.ui.common.TitledValue
        android:id="@+id/vFirst"
        style="@style/TextView.TitledValue"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@+id/vSecond"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vTitle"
        app:name="@string/active"
        app:value="36" />

    <cz.pepa.runapp.ui.common.TitledValue
        android:id="@+id/vSecond"
        style="@style/TextView.TitledValue"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/vThird"
        app:layout_constraintLeft_toRightOf="@id/vFirst"
        app:layout_constraintTop_toTopOf="@id/vFirst"
        app:name="@string/distance" />

    <cz.pepa.runapp.ui.common.TitledValue
        android:id="@+id/vThird"
        style="@style/TextView.TitledValue"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/vFourth"
        app:layout_constraintLeft_toRightOf="@id/vSecond"
        app:layout_constraintTop_toTopOf="@id/vFirst"
        app:name="@string/steps"
        app:value="@string/steps"/>

    <cz.pepa.runapp.ui.common.TitledValue
        android:id="@+id/vFourth"
        style="@style/TextView.TitledValue"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/vThird"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/vFirst"
        app:name="@string/calories" />
    
</android.support.constraint.ConstraintLayout>